// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuesContainer should match snapshot 1`] = `
<section
  className="VenuesContainer"
>
  <article
    className="search-bar-container"
  >
    <Connect(VenueSearchBar)
      location="venues"
    />
  </article>
  <article
    className="venues-container"
  >
    <h3>
      Found 1 dojos in DENVER
    </h3>
    <VenueCard
      venue={
        Object {
          "id": 1,
          "name": "Venue One",
          "notes": "Here be Dragons",
        }
      }
    />
  </article>
</section>
`;

exports[`VenuesContainer should match snapshot with error/loading 1`] = `
<section
  className="VenuesContainer"
>
  <article
    className="search-bar-container"
  >
    <Connect(VenueSearchBar)
      location="venues"
    />
  </article>
  <article
    className="venues-container"
  >
    <h3>
      Found 1 dojos in DENVER
    </h3>
    <h4>
      Failed to fetch
    </h4>
    <VenueCard
      venue={
        Object {
          "id": 1,
          "name": "Venue One",
          "notes": "Here be Dragons",
        }
      }
    />
  </article>
</section>
`;
